--- a/.github/workflows/update-age.yml
+++ b/.github/workflows/update-age.yml
@@ -2,23 +2,20 @@ name: 🕒 Update Age in README
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Every day at midnight UTC
-  workflow_dispatch:     # Allow manual runs
+    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  workflow_dispatch:     # Allows manual triggering
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
-      - name: Install dependencies (if needed)
-        run: npm install  # If you use packages; safe to leave
 
       - name: Run age update script
         run: node update-age.js
