--- a/.github/workflows/update-age.yml
+++ b/.github/workflows/update-age.yml
@@ -20,10 +20,11 @@ jobs:
       - name: Run age update script
         run: node update-age.js
 
-      - name: Commit and push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "🔄 Update age in README"
-          git push
+- name: Commit and push changes
+  run: |
+    git config user.name "github-actions[bot]"
+    git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+    git add README.md
+    git diff --cached --quiet || git commit -m "🔄 Update age in README"
+    git push
+
